--- a/style.css
+++ b/style.css
@@ -20,6 +20,19 @@ body {
 h1 {
     color: var(--accentLight);
     font-weight: 700;
+    font-size: 2.25em;
+}
+
+h2 {
+    font-size: 1.75em;
+}
+
+h3 {
+    font-size: 1.4em;
+}
+
+p {
+    font-size: 1.3em;
 }
 
 a {
@@ -77,7 +90,16 @@ iframe[src*=youtube] {
     background: rgba(255, 255, 255, 0.4);
 }
 
+#main a {
+    font-size: 1.3em;
+}
+
+.blog p, .blog h3, .blog a {
+    text-align: left;
+}
+
 /* Mobile CSS rules */
+
 @media only screen and (max-width: 801px) {}
 
 @keyframes bg {
