--- a/style.css
+++ b/style.css
@@ -38,10 +38,14 @@ p {
 a {
     color: #f2f2f2;
     text-decoration: none;
+    background: linear-gradient(to left, rgba(0, 0, 0, 0) 51%, #ddd 50%) right;
+    background-size: 200%;
+    transition: .2s ease-out;
 }
 
 a:hover {
     color: black;
+    background-position: left;
 }
 
 img {
@@ -61,10 +65,6 @@ nav a {
     text-align: center;
     padding: 14px 16px;
     font-size: 17px;
-}
-
-nav a:hover {
-    background-color: #ddd;
 }
 
 video {
