--- a/style.css
+++ b/style.css
@@ -104,6 +104,22 @@ iframe[src*=youtube] {
     bottom: 125%;
 }
 
+.sketchfab-embed-wrapper {
+    position: relative;
+    padding-bottom: 56.25%;
+    /* 16:9 */
+    padding-top: 25px;
+    height: 0;
+}
+
+.sketchfab-embed-wrapper iframe {
+    position: absolute;
+    top: 0;
+    left: 20%;
+    width: 60%;
+    height: 60%;
+}
+
 .blog p, .blog h3, .blog a {
     text-align: left;
 }
@@ -117,7 +133,17 @@ iframe[src*=youtube] {
 
 /* Mobile CSS rules */
 
-@media only screen and (max-width: 801px) {}
+@media only screen and (max-width: 801px) {
+    .sketchfab-embed-wrapper iframe {
+        left: 5%;
+        width: 90%;
+        height: 90%;
+    }
+    #rocketImage {
+        width: 30%;
+        left: 35%;
+    }
+}
 
 @keyframes bg {
     0% {
