--- a/style.css
+++ b/style.css
@@ -104,20 +104,11 @@ iframe[src*=youtube] {
     bottom: 125%;
 }
 
-.sketchfab-embed-wrapper {
-    position: relative;
-    padding-bottom: 56.25%;
-    /* 16:9 */
-    padding-top: 25px;
-    height: 0;
-}
-
 .sketchfab-embed-wrapper iframe {
-    position: absolute;
-    top: 0;
-    left: 20%;
-    width: 60%;
-    height: 60%;
+    display: block;
+    margin: 0 auto;
+    padding-bottom: 10px;
+    width: 50%
 }
 
 .blog p, .blog h3, .blog a {
@@ -135,9 +126,7 @@ iframe[src*=youtube] {
 
 @media only screen and (max-width: 801px) {
     .sketchfab-embed-wrapper iframe {
-        left: 5%;
         width: 90%;
-        height: 90%;
     }
     #rocketImage {
         width: 30%;
